Primer commit - Dashboard de viajes

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -385,7 +385,9 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:3000/api/trips';
+        const API_URL = window.location.hostname === 'localhost' 
+            ? 'http://localhost:3000/api/trips'
+            : '/api/trips';
         let charts = {};
 
         function changeTab(index) {
