--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -241,6 +241,15 @@
             color: #95a5a6;
         }
 
+        .error-message {
+            background: #fee;
+            color: #c33;
+            padding: 15px;
+            border-radius: 4px;
+            margin: 20px 0;
+            border-left: 4px solid #c33;
+        }
+
         @media (max-width: 768px) {
             .wrapper {
                 padding: 10px;
@@ -385,9 +394,8 @@
     </div>
 
     <script>
-        const API_URL = window.location.hostname === 'localhost' 
-            ? 'http://localhost:3000/api/trips'
-            : '/api/trips';
+        // CORRECCIÓN: Usar rutas relativas que funcionan tanto en local como en Vercel
+        const API_URL = '/api/trips';
         let charts = {};
 
         function changeTab(index) {
@@ -401,13 +409,27 @@
 
         async function getData(endpoint) {
             try {
+                console.log('Fetching:', `${API_URL}${endpoint}`);
                 const res = await fetch(`${API_URL}${endpoint}`);
-                if (!res.ok) throw new Error('Error en la petición');
-                return await res.json();
+                if (!res.ok) {
+                    throw new Error(`HTTP error! status: ${res.status}`);
+                }
+                const data = await res.json();
+                console.log('Data received:', data);
+                return data;
             } catch (err) {
-                console.error('Error:', err);
+                console.error('Error fetching data:', err);
+                showError(`Error al cargar datos: ${err.message}`);
                 return null;
             }
+        }
+
+        function showError(message) {
+            const errorDiv = document.createElement('div');
+            errorDiv.className = 'error-message';
+            errorDiv.textContent = message;
+            document.querySelector('.wrapper').insertBefore(errorDiv, document.querySelector('.nav-tabs'));
+            setTimeout(() => errorDiv.remove(), 5000);
         }
 
         function destroyChart(id) {
@@ -429,7 +451,7 @@
         // Cargar datos de tipos de usuario
         async function loadUserData() {
             const data = await getData('/1.1');
-            if (!data) return;
+            if (!data || data.length === 0) return;
 
             const colors = ['#3498db', '#e74c3c'];
             const metricsHtml = data.map((item, i) => `
@@ -471,7 +493,7 @@
             const hour = document.getElementById('filter-hour').value;
             const endpoint = hour ? `/1.2?hour=${hour}` : '/1.2';
             const data = await getData(endpoint);
-            if (!data) return;
+            if (!data || data.length === 0) return;
 
             destroyChart('hours');
             const ctx = document.getElementById('chart-hours').getContext('2d');
@@ -501,7 +523,7 @@
         // Cargar datos por día
         async function loadDayData() {
             const data = await getData('/1.3');
-            if (!data) return;
+            if (!data || data.length === 0) return;
 
             destroyChart('days');
             const ctx = document.getElementById('chart-days').getContext('2d');
@@ -602,7 +624,7 @@
             if (params.length) endpoint += '?' + params.join('&');
 
             const data = await getData(endpoint);
-            if (!data) return;
+            if (!data || data.length === 0) return;
 
             const days = ['Dom', 'Lun', 'Mar', 'Mié', 'Jue', 'Vie', 'Sáb'];
             
@@ -666,12 +688,15 @@
         }
 
         // Cargar todo al inicio
-        initFilters();
-        loadUserData();
-        loadHourData();
-        loadDayData();
-        loadStationsData();
-        loadHourDayData();
+        window.addEventListener('DOMContentLoaded', () => {
+            console.log('Página cargada, iniciando...');
+            initFilters();
+            loadUserData();
+            loadHourData();
+            loadDayData();
+            loadStationsData();
+            loadHourDayData();
+        });
     </script>
 </body>
 </html>
